// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SourceFilesView should render correctly 1`] = `
<div
  id="source-files-container"
>
  <ProgressWrapper
    loading={true}
  >
    <div>
      <div
        className="download-all-wrapper clearfix"
      >
        <div
          className="pull-right"
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsSize="small"
            bsStyle="info"
            disabled={false}
            onClick={[Function]}
            test-attr="down-all-btn"
          >
            <i
              className="glyphicon glyphicon-download-alt"
            />
             
            Download All
          </Button>
        </div>
      </div>
      <AccordionWrapper
        accordion={false}
        className="accordion"
        onChange={[Function]}
      >
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "addItem": [Function],
              "removeItem": [Function],
              "setAccordion": [Function],
              "setExpanded": [Function],
              "setOnChange": [Function],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={false}
          hideBodyClassName=""
          key="hello_world.py"
        >
          <AccordionItemTitleWrapper
            className="accordion__title accordion__title--animated"
            hideBodyClassName=""
          >
            <h5
              className="u-position-relative"
            >
              hello_world.py
              <div
                className="accordion__arrow"
                role="presentation"
              />
            </h5>
            <div />
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <div
              className="clearfix"
            >
              <div
                className="pull-left upload-date"
              >
                Upload Date: 
              </div>
              <div
                className="pull-right"
              >
                <Button
                  active={false}
                  block={false}
                  bsClass="btn"
                  bsSize="xsmall"
                  bsStyle="default"
                  disabled={false}
                  onClick={[Function]}
                  test-attr="down-btn-hello_world.py"
                >
                  <i
                    className="glyphicon glyphicon-download-alt"
                  />
                   Download
                </Button>
              </div>
            </div>
            <FilePreview
              fileId="5a1bd242ca100c1a210b0d3a"
              fileName="hello_world.py"
              sourceFiles={Object {}}
            />
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
      </AccordionWrapper>
    </div>
  </ProgressWrapper>
</div>
`;

exports[`SourceFilesView should render correctly 2`] = `
<div
  id="source-files-container"
>
  <ProgressWrapper
    loading={false}
  >
    <div>
      <div
        className="download-all-wrapper clearfix"
      >
        <div
          className="pull-right"
        >
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsSize="small"
            bsStyle="info"
            disabled={false}
            onClick={[Function]}
            test-attr="down-all-btn"
          >
            <i
              className="glyphicon glyphicon-download-alt"
            />
             
            Download All
          </Button>
        </div>
      </div>
      <AccordionWrapper
        accordion={false}
        className="accordion"
        onChange={[Function]}
      >
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "addItem": [Function],
              "removeItem": [Function],
              "setAccordion": [Function],
              "setExpanded": [Function],
              "setOnChange": [Function],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={false}
          hideBodyClassName=""
          key="hello_world.py"
        >
          <AccordionItemTitleWrapper
            className="accordion__title accordion__title--animated"
            hideBodyClassName=""
          >
            <h5
              className="u-position-relative"
            >
              hello_world.py
              <div
                className="accordion__arrow"
                role="presentation"
              />
            </h5>
            <div>
              /src/hello_world.py
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <div
              className="clearfix"
            >
              <div
                className="pull-left upload-date"
              >
                Upload Date: 
                2017-11-27T08:52:18.562Z
              </div>
              <div
                className="pull-right"
              >
                <Button
                  active={false}
                  block={false}
                  bsClass="btn"
                  bsSize="xsmall"
                  bsStyle="default"
                  disabled={false}
                  onClick={[Function]}
                  test-attr="down-btn-hello_world.py"
                >
                  <i
                    className="glyphicon glyphicon-download-alt"
                  />
                   Download
                </Button>
              </div>
            </div>
            <FilePreview
              fileId="5a1bd242ca100c1a210b0d3a"
              fileName="hello_world.py"
              sourceFiles={
                Object {
                  "hello_world.py": Object {
                    "data": "SGVsbG8gV29ybGQh",
                    "filename": "hello_world.py",
                    "filepath": "/src/hello_world.py",
                    "id": "5a1bd242ca100c1a210b0d3a",
                    "uploadDate": "2017-11-27T08:52:18.562Z",
                  },
                  "hello_world_2.py": Object {
                    "data": "",
                    "filename": "hello_world_2.py",
                    "filepath": "/src/hello_world_2.py",
                    "id": "5a1bd242ca100c1a210b0d3b",
                    "uploadDate": "2017-11-27T08:53:18.562Z",
                  },
                }
              }
            />
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
      </AccordionWrapper>
    </div>
  </ProgressWrapper>
</div>
`;
